# meok-eu-ai-act-art-13-ifu-mcp

./: .gitignore  .mcp.json  README.md  SECURITY.md  acp.json  llms.txt  pyproject.toml  server.json  server.py  smithery.yaml
.github/workflows/: ci.yml
.well-known/: agent-card.json  agent.json  mcp-server-card.json
meok_eu_ai_act_art_13_ifu_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_ifu.py
