[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meok-eu-ai-act-art-13-ifu-mcp"
version = "1.0.0"
description = "MEOK EU AI Act Article 13 Instructions for Use generator — provider-side IFU with 7 mandatory Art 13(3) elements + Art 14 oversight design + FRIA crosswalk. By MEOK AI Labs."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Nicholas Templeman", email = "nicholas@meok.ai" }]
keywords = ["mcp", "eu-ai-act", "article-13", "instructions-for-use", "ifu", "provider-compliance", "meok"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Office/Business :: Financial",
]
dependencies = ["mcp[cli]>=1.3.0"]

[project.urls]
Homepage = "https://meok.ai/governance"
Repository = "https://github.com/CSOAI-ORG/meok-eu-ai-act-art-13-ifu-mcp"

[project.scripts]
meok-eu-ai-act-art-13-ifu-mcp = "server:main"

[tool.setuptools]
py-modules = ["server"]
